--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5117,7 +5117,8 @@ ROM_for_country_side:0 "For the Country Side"
 ROM_for_country_side_desc:0 ""
 ROM_investments_in_rural_education:0 "Investments in Rural Education"
 ROM_investments_in_rural_education_desc:0 ""
-ROM_our_rural_base:0 "Our rural base"
+ROM_our_rural_base:0 "Pander to Our Rural Base"
+ROM_our_rural_base_desc:0 "We need to consolidate our support across the country to ensure we have popular support. We should increase our messaging across the rural Romania and pass some small scale laws to benefit them."
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
@@ -5252,8 +5253,8 @@ ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§!
 ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
-ROM_democracy_tt:0 "Having §YDmitrie Sturdza§! as an advisor will increase this focus by §G5%§! democracy support §G5%§! stability and §Y50§! political power"
-
+ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! was hired as an advisor, this focus will instead have the effect:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!\nGain Base Stability: §G+5.00%§!"
+ROM_rural_base.tt2:0 "Our advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus"
 
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
