--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5233,7 +5233,7 @@ scholarly_statesman:0 "Scholarly Statesman"
 modernizer:0 "Modernizer"
 diplomatic_stabilizer:0 "Diplomatic stabilizer"
 member_of_PC:0 "Member of §cPC§!"
-member_of_PNL:0 "Member of §mPNL§!"
+member_of_PNL:0 "Member of §lPNL§!"
 member_of_PSDR:0 "Member of §rPSDR§!"
 member_of_PND:0 "member of §qPND§!"
  
@@ -5246,7 +5246,7 @@ ROM_army_org:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Divisi
 ROM_speed:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 member_of_pc:0 "Member of §cPC§!"
-member_of_pnl:0 "Member of §mPNL§!"
+member_of_pnl:0 "Member of §lPNL§!"
 member_of_psdr:0 "Member of §rPSDR§!"
 member_of_pnd:0  "Member of §qPND§!"
 ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§! will be available"
