Added Icons + Fixed TT

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4987,7 +4987,7 @@ ROM_re_assure_liberals:0  "Reassure The Liberals"
 ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 ROM_restore_christianity_to_romania:0 "Restore Christianity to Romania"
 ROM_restore_christianity_to_romania_desc:0 ""
-ROM_blurry_the_lines_between_church_and_state:0 "Blur the Lines between Church and State"
+ROM_blurry_the_lines_between_church_and_state:0 "Dismantle the Secular State"
 ROM_blurry_the_lines_between_church_and_state_desc:0 ""
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
@@ -5253,8 +5253,8 @@ ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§!
 ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
-ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! was hired as an advisor, this focus will instead have the effect:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!\nGain Base Stability: §G+5.00%§!"
-ROM_rural_base.tt2:0 "Our advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus"
+ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus would have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
+ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 
 
  TUR_promote_turkish_culture_in_aegean:0 "Promote Turkish Culture in Aegean"
