--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5119,6 +5119,7 @@ ROM_investments_in_rural_education:0 "Investments in Rural Education"
 ROM_investments_in_rural_education_desc:0 ""
 ROM_our_rural_base:0 "Pander to Our Rural Base"
 ROM_our_rural_base_desc:0 "We need to consolidate our support across the country to ensure we have popular support. We should increase our messaging across the rural Romania and pass some small scale laws to benefit them."
+ROM_invite_western_thinkers:0 "Invite Western Thinkers"
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
@@ -5226,7 +5227,7 @@ ROM_corruption_purges:0 "Corruption purges"
 ROM_balance_budget:0 "Budget Balancing"
 ROM_blue_law_overturned:0 "Overturned Blue Law"
 ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
-
+ROM_influx_of_western_intellectuals_idea:0 "Influx of western intellectuals"
 #Traits
 
 scholarly_statesman:0 "Scholarly Statesman"
