--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2815,6 +2815,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_railway_improve1:0 "Poor Railway System"
  ROM_decentralization_idea:0 "Decentralization"
  ROM_tax_cuts_for_poor:0 "Tax Cuts for the Poor"
+ ROM_enpower_the_elites_idea:0 "Empowered Elites"
+ ROM_enpower_the_elites_idea_desc:0 ""
  
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
