--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2855,6 +2855,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  ROM_iacob_zadik:0 "Iacob Zadik"
  ROM_dimitrie_sturdza:0 "Dimitrie Sturdza"
  ROM_nicolae_filipescu:0 "Nicolae Filipescu"
+ ROM_nicolae_malaxa:0 "Nicolae Malaxa"
  
  # RUSSIA
  RUS_mikhail_aleksandrovich_romanov:0 "Mikhail Aleksandrovich Romanov"
