--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5096,6 +5096,8 @@ ROM_welcome_anglo_italian_banks:0 "Welcome Anglo-Italian Banks"
 ROM_welcome_anglo_italian_banks_desc:0 ""
 ROM_center_consensus:0 "The Consensus of The Center"
 ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has hurt Romania greatly. The PND were appointed by the king for a reason: to bring a uniting, moderate government into power that the majority of Romanians can get behind."
+ROM_reach_out_to_the_industrialists:0 "Reach Out to the Industrialists"
+ROM_reach_out_to_the_industrialists_desc:0 ""
 
 ROM_romanian_army:0 "The Romanian Army"
 ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
@@ -5230,7 +5232,7 @@ ROM_corruption_purges:0 "Corruption purges"
 ROM_balance_budget:0 "Budget Balancing"
 ROM_blue_law_overturned:0 "Overturned Blue Law"
 ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
-ROM_influx_of_western_intellectuals_idea:0 "Influx of western intellectuals"
+ROM_influx_of_western_intellectuals_idea:0 "Influx of Western Intellectuals"
 #Traits
 
 scholarly_statesman:0 "Scholarly Statesman"
