--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -459,3 +459,4 @@
  minister_of_national_defense:0 "Minister of National Defense"
  administration_reformer:0 "Administration Reformer"
  judicial_reformer:0 "Judicial Reformer"
+ Industrialist:0 "Industrialist"
