--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2417,6 +2417,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_minority_decision:0 "Management of Minorities"
  TRS_arab_uprising_dummy:0 "Arab Uprising"
  TRS_arab_uprising_dummy_desc:0 "Our reforms in Syria have been vastly unpopular. As the opposition grew, it reached a point where it can trigger an all-out rebellion."
+ TRS_arab_uprising_mission:0 "Arab Uprising"
+ TRS_arab_uprising_mission_desc:0 "Our reforms in Syria have been vastly unpopular. As the opposition grew, it reached a point where it can trigger an all-out rebellion."
  TUR_conscription_in_karak:0 "Conscription in Karak"
  TUR_conscription_in_karak_desc:0 "Druze minority in our empire has been resisting our centralization efforts. As previous Druze rebellion has proven, has proven, we have to strengthen our grip by increasing conscription and tax collection."
  TUR_conscription_in_karak_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£attrition_texticon  Division Attrition: §R+20.0%§!\n"
