--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4556,10 +4556,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.21.t:0 "Arabist Movement Seeks Independence"
  ottoman_syria.21.d:0 "What initially argued for equal representation and decentralization, the Arabist movement has started to seek outright independence. Our staggering defeat at the hands of our enemies has pursued the Arabist movement to seek independence as they fear our loss would result in occupation by foreign powers."
  ottoman_syria.21.a:0 "They're showing their true colors."
- ottoman_syria.23.t:0 "Hussein's Revolt"
- ottoman_syria.23.d:0 "Dissolutioned with the Turkish rule, [HJZ.GetLeader] has started an outright rebellion against our empire. Many within the empire, both Arabs of Syria and heads of the central government, accused Cemâl's draconian rule in the land. Hussein's revolt in Hejaz undoubtedly rallied the Arab opposition in Syria. While Cemâl staunchly opposes moderating his policies in Syria, perhaps undertaking such action will ease the opposition by the locals."
- ottoman_syria.23.a:0 "No revolt can change our policies."
- ottoman_syria.23.b:0 "Intervention of central government moderates our actions."
+ ottoman_syria.22.t:0 "Hussein's Revolt"
+ ottoman_syria.22.d:0 "Dissolutioned with the Turkish rule, [HJZ.GetLeader] has started an outright rebellion against our empire. Many within the empire, both Arabs of Syria and heads of the central government, accused Cemâl's draconian rule in the land. Hussein's revolt in Hejaz undoubtedly rallied the Arab opposition in Syria. While Cemâl staunchly opposes moderating his policies in Syria, perhaps undertaking such action will ease the opposition by the locals."
+ ottoman_syria.22.a:0 "No revolt can change our policies."
+ ottoman_syria.22.b:0 "Intervention of central government moderates our actions."
+ ottoman_syria.23.t:0 "Syrian Uprising"
+ ottoman_syria.23.d:0 "Syria has always been a detached part of the empire. Unlike those regions like Rumelia or Anatolia, Syria enjoyed a large degree of self-management and a lack of state rule due to the structure of the Ottoman state and the loyalty derived from its religious makeup. Yet recent centralizetion efforts of the empire has changed the centuries old sociopolitical landscape.\nCentralization policies of the empire combined with the draconian rule of Ahmed Cemâl Paşa has resulted in a growing desire for Arabs to seek salvation from their newly imposed oppressors. Though many of their movements started with a desire for autonomy, radical policies of İttihadist state pursued them to follow outright independence from the empire. The recent revolt in Syria by many aspects of the society including Arabs, Christians and Jews signify a rebellion by the people against their Turkish overlords."
+ ottoman_syria.23.a:0 "Traitors on all fronts."
+ ottoman_syria.23.b:0 "For a free Syria!"
+ ottoman_syria.23.c:0 "What will happen to the Ottoman realm."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
