--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5127,7 +5127,7 @@ ROM_our_rural_base_desc:0 "We need to consolidate our support across the country
 ROM_invite_western_thinkers:0 "Invite Western Thinkers"
 ROM_invest_in_romania_steel_industry:0 "Invest in Romania’s steel industry"
 ROM_romania_for_those_who_deserve_it:0 " Romania for those who deserve it"
-ROM_austia_military_research:0 "Cooperation with Austria Hungary in military research"
+ROM_austia_military_research:0 "Military Cooperation with Austria-Hungary"
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
@@ -5236,7 +5236,7 @@ ROM_balance_budget:0 "Budget Balancing"
 ROM_blue_law_overturned:0 "Overturned Blue Law"
 ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
 ROM_influx_of_western_intellectuals_idea:0 "Influx of Western Intellectuals"
-ROM_aristocratic_romania_idea:0 "An Aristocratic Romnaia"
+ROM_aristocratic_romania_idea:0 "An Aristocratic Romania"
 #Traits
 
 scholarly_statesman:0 "Scholarly Statesman"
