--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4474,7 +4474,7 @@
  TUR_army_modernization_tt:0 "Replace §YArmy of a Bygone Era§! with §YArmy of the Modern Era§!\nEffective change:\n£army_experience  Army Experience Gain: §G+10%§!\n\n"
  TUR_armoured_vehicle_reward:0 " \nIf we're in faction with [ITA.GetFlag]§Y[ITA.GetNameDef]§!, we will receive the following bonuses:"
  TUR_army_inspectorates:0 "Army Inspectorates"
- TUR_army_inspectorates_desc:0 "Our Current military organization lacks and fails to compete with the European powers. By replacing the current system of army commands with army inspectorrates, we can trainü mobilize and organiza our armed forces more effectively"
+ TUR_army_inspectorates_desc:0 "Our Current military organization lacks and fails to compete with the European powers. By replacing the current system of army commands with army inspectorrates, we can train mobilize and organiza our armed forces more effectively"
  TUR_army_inspectorates_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\n£mobilisation_texticon  Mobilization speed: §G+5.00%§!\n£organization_texticon  Division Organization: §G+5.0%§!\n£training_speed_texticon  Training time: §G-5.00%§!\n\n"
  TUR_deployment_of_artillery:0 "Deployment of Artillery"
  TUR_deployment_of_artillery_desc:0 "Recent reorganizations in our armed forces have seen improvements in the composition of our army. Yet infantry can do so much in an era of artillery. By integrating artillery into our army, we can achieve more than what we initally dreamt of."
