--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -675,7 +675,7 @@
  TUR_cabinet_crisis_desc:0 "Recent resignation of İbrahim Hakkı Paşa has led to the creation of a new government led by Mehmet Said Paşa. Yet this cabinet is plagued by inexperienced politicians and an ever-growing opposition. Untill the formation of a new parliament, either the formation of a new parliament, either through elections or other means, ineffective governance will hinder our abilities."
  TUR_tax_collection:0 "Tax Collection"
  TUR_tax_collection_desc:0 "Intensified tax collection in the state has increased the overall revenue of our treasury and our state."
- TUR_tax_collection_tt:0 "Effects for controller:\nConsumer Goods Factories: §Y-1.0%§!\n"
+ TUR_tax_collection_tt:0 "Effects for controller:\n£consumer_goods_texticon  Consumer Goods Factories: §Y-1.0%§!\n"
  TUR_tax_collection_dm:0 "Tax Collection"
  TUR_tax_collection_dm_desc:0 "Intensified tax collection in the state has increased the overall revenue of our treasury and our state."
  TUR_armenian_minority:0 "£ww1_flag_ARM  §YArmenian Minority§!"
