--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4176,7 +4176,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.46.d:0 "An earthquake stroke our Anatolian province of Burder, which is located near Isparta. The earthquake effectively destroyed any settlement present in the area, with also other historically significant monuments being also effected. In the centre of Isparte, the great Mosque was destroyed with more than half of the homes.\nThis earthquake has effectively tested our empire's capability of looking after its populace."
  ottoman.46.a:0 "There's nothing left to recover."
  ottoman.47.t:0 "Blockade of the Eastern Mediterranea"
- ottoman.47.d:0 "Our recent war decision with France and Britain have had some unintended consequences. Being naval powers, France and Britain has started a blockade against our nation. Unless anything is done against this blockade, it'll slowly starve our nation."
+ ottoman.47.d:0 "Our recent war decision with France and Britain have had some unintended consequences. Being naval powers, our enemies have started a blockade against our nation. Unless anything is done against this blockade, it'll slowly starve our nation."
  ottoman.47.a:0 "Pray that you're not starving- oh..."
  ottoman.48.t:0 "The Great Famine of Mount Lebanon"
  ottoman.48.d:0 "A Great Famine in Mount Lebanon has started. Unless we reach a helping hand, near half of the population will surely die. But helping the people will require many precious resources which we're using for modernization. What shall we do?"
