--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5263,6 +5263,7 @@ ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§!
 ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
+ROM_austrian_support_withdraw.tt:0 "If we go to war with §YAustria§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus would have the following effects:\nChange in popularity of Democracy: §G+15.00%§!\nPolitical Power: §G+50§!.\nGain Base Stability: §G+5.00%§!.\n\n"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 
