RAJ Partial 1915 Events Done UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9396,6 +9396,16 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  #INDIA/RAJ
 
  # Flavor #
+
+ # 1910
+ 
+ ww1_flavor_raj.15.t:0 "Second Hearing of the Howrah-Sibpur Conspiracy Case"
+ ww1_flavor_raj.15.d:0 "The Howrah-Sibpur conspiracy case began with the murder of Inspector, Assistant Superintendent and Intelligence Officer of the Bengal Police, Shamsul Alam, on 24 January 1910 in Calcutta. Alam was investigating the murder of Naren Gosain, crown-witness in the Alipore bomb case, the murder of Ashutosh Biswas, the Calcutta High Court advocate in charge of prosecuting the Gossain murder case, and the murder of police officer Naren Bannerjee, who had arrested Khudiram Bose. Alam had uncovered the underlying Bengali revolutionary network of the 'Anushilan Samiti' that linked the murders and other robberies, and was preparing to consolidate the charges to bring them all to trial in a single case.\n\nBy 29 January 1910, 47 of the accused had been arrested. The trial of the accused began on 4 March 1910, with a second hearing in the Calcutta High Court taking place today. However, the decentralised structure of the Samiti meant that the prosecution's attempts to show that the crimes were linked and that the Samiti was a unified organisation failed. 33 of the accused were subsequently acquitted. Of the accused, Jatin Mukherjee and Narendranath Bhattacharjee were among those convicted and sentenced to one year's imprisonment."
+ ww1_flavor_raj.15.a:0 "We'll keep this ''Samiti'' organisation in check."
+
+ ww1_flavor_raj.16.t:0 "Imperial Tobacco Company of India Limited Founded"
+ ww1_flavor_raj.16.d:0 "In a significant development for the Indian tobacco industry, the Imperial Tobacco Company of India Limited has been officially established in Kolkata. This new venture marks a major step forward in the consolidation and expansion of tobacco manufacturing and distribution in the region. The company, succeeding ''Imperial Brands'' and ''W.D. & H.O. Wills'', aims to harness the growing demand for tobacco products in India. With an initial focus on the production and marketing of cigarettes and other tobacco goods."
+ ww1_flavor_raj.16.a:0 "A cigarette a day keeps the doctor away, or something like that!"
  
  # 1911
  ww1_flavor_raj.1.t:0 "First Official Airmail Flight in the World"
@@ -9461,6 +9471,17 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.14.d:0 "Recently, the Komagata Maru, a Japanese steamship, sailed from British Hong Kong via Shanghai, China and Yokohama, Japan to Vancouver, British Columbia, Canada, arriving on 4 April. However, a group of 376 people from British India, comprising 337 Sikhs, 27 Muslims and 12 Hindus, all from the Punjab, attempted to immigrate to Canada via the Komagata Maru. While 24 were admitted to Canada, the other 352 were not allowed to disembark due to the Continuous Journey Regulation, which prohibits the admission to Canada of those who ''arrive from the country of their birth or nationality by means of a continuous journey and/or tickets purchased before leaving the country of their birth or nationality''. The ship was forced to leave Canadian waters, escorted by HMCS Rainbow, one of Canada's first two naval vessels, and the remaining travellers were forced to return to Budge Budge, near Calcutta. There the Indian Imperial Police attempted to arrest the group's leaders, which prompted a riot, and the crowd was subsequently fired upon by the police, resulting in some deaths."
  ww1_flavor_raj.14.a:0 "Hopefully this will be the worst thing to happen this year!"
 
+ # 1915
+
+ ww1_flavor_raj.17.t:0 "Ghandi Returns to India"
+ ww1_flavor_raj.17.d:0 "After years of campaigning for Indian rights in South Africa, Mohandas Karamchand Gandhi has returned to India, his homeland. Arriving in Bombay to a warm and enthusiastic reception, Gandhi's return marks a significant moment in India's struggle for independence. Gandhi, who had spent two decades in South Africa, emerged as a prominent and charismatic leader, using his philosophy of non-violent resistance, or satyagraha, to combat racial discrimination and injustice. His efforts in South Africa not only inspired millions, but also set the stage for his future endeavours in India.\n\nGandhi's return is expected to reinvigorate the Indian independence movement as he brings his wealth of experience, leadership and dedication to the cause of freedom and justice. Although he isn't the current president of the INC, he is now wielding increasing influence within the Congress and has become its leader in all but name."
+ ww1_flavor_raj.17.a:0 "A. O. Hume would be proud."
+ RAJ_ghandi_return_option:0 "\n§YMohandas Karamchand Gandhi§! will now be able to call for non-violent actions."
+
+ ww1_flavor_raj.18.t:0 "All-India Hindu Grand Assembly Formed"
+ ww1_flavor_raj.18.d:0 "In a momentous development for Hindu political and cultural unity, the Sarvadeshak Hindu Sabha (All-India Hindu Grand Assembly), was officially established at the Kumbh Mela in Haridwar this month. This umbrella organization is the culmination of a concerted effort by Hindu leaders to consolidate regional Hindu Sabhas into a singular, powerful entity. The initiative, sparked by the controversial partition of Bengal in 1905 and the subsequent formation of the All India Muslim League, sought to safeguard Hindu interests amisdt increasing communal tensions. Preparatory sessions were held earlier this year in Haridwar, Lucknow, and Delhi, leading to the grand assembly's formation. Prominent figures such as Mahatma Gandhi and Swami Shraddhanand lent their support, emphasizing Hindu solidarity and the need for social reforms."
+ ww1_flavor_raj.18.a:0 "Let's keep an eye on them."
+
  # Focus #
 
  ww1_raj.1.t:0 "The Earl of Minto Resigns."
@@ -9519,10 +9540,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.13.a:0 "Enough to make a grown man cry."
  RAJ_buck_fucking_dies:0 "§YEdward Charles Buck§! dies. You are sad."
 
- ww1_raj.15.t:0 "All-India Hindu Grand Assembly Formed"
- ww1_raj.15.d:0 "PLACEHOLDER"
- ww1_raj.15.a:0 "Another group of fanatics."
-
  ww1_raj.16.t:0 "Indian Home Rule Movement Formed"
  ww1_raj.16.d:0 "It is no secret that many Indian revolutionaries oppose the war. Inspired by Annie Besant's ''Irish Home Rule League'', Tilak recently founded the first Indian Home Rule League, to which Besant responded by founding the first Indian Home Rule League at the Bombay Provincial Congress in Belgaum in April. Shortly followed by the second league at Adyar, Madras, in September.\n\nProminent Indians like Joseph Baptista, Muhammad Ali Jinnah, G. S. Khaparde, Sir S. Subramania Iyer, Satendra Nath Bose followed suit and decided to organise a national alliance of leagues across India, specifically to demand Home Rule or self-government within the British Empire for the whole of India."
  ww1_raj.16.a:0 "England's need is India's opportunity."
@@ -9549,9 +9566,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.21.d:0 "PLACEHOLDER"
  ww1_raj.21.a:0 "Let's hope this doesn't devolve into violence."
 
- ww1_raj.22.t:0 "Second Hearing of the Howrah-Sibpur Conspiracy Case"
- ww1_raj.22.d:0 "PLACEHOLDER"
- ww1_raj.22.a:0 "Let's hope they've learned their lesson."
+ 
 
  ww1_raj.23.t:0 "George V Adress the Parliament"
  ww1_raj.23.d:0 "Today, King George V addressed the British Parliament, reflecting on his recent tour of the imperial colonies, including his visit to India a few months ago. In his speech, he expressed his admiration for the loyalty and progress he had witnessed among the Indian people and government. This speech came shortly after the great Delhi Durbar, where he and Queen Mary were proclaimed Emperor and Empress of India, and a new series of reforms for India were announced."
