--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4479,6 +4479,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.129.t:0 "Ottomans will not Take Further Investment Requests"
  ottoman.129.d:0 "As we've made our decision to invest in [TUR.GetNameDef], the [TUR.GetAdjective] government has rejected our request to invest in them. Stating that they won't be accepting any investments from our nation any longer, our investment portfolia has been returned."
  ottoman.129.a:0 "We'll keep our money to ourselves."
+ ottoman.130.t:0 "Organization of the Ottoman Socialist Party"
+ ottoman.130.d:0 "Though many socialist movements and local parties have been present, they never organized into one single entity. Untill now, Refik Nevzat Bey was the man with the most credit, but him being in Paris hindered his ability to manage and organize its party into a state which how we'd associate political parties today. With the latest initiatives and news papers of Hüseyin Hilmi Bey, someone finally united moslty unorganized and uncentralized socialist movements under one roof."
+ ottoman.130.a:0 "A nice, intellectual club distant from the public."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
