fixed some bugs

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4482,6 +4482,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.130.t:0 "Organization of the Ottoman Socialist Party"
  ottoman.130.d:0 "Though many socialist movements and local parties have been present, they never organized into one single entity. Untill now, Refik Nevzat Bey was the man with the most credit, but him being in Paris hindered his ability to manage and organize its party into a state which how we'd associate political parties today. With the latest initiatives and news papers of Hüseyin Hilmi Bey, someone finally united moslty unorganized and uncentralized socialist movements under one roof."
  ottoman.130.a:0 "A nice, intellectual club distant from the public."
+ ottoman.131.t:0 "Asien-Korps Arrived"
+ ottoman.131.d:0 "Our ally [GER.GetName] has sent a detachment of their army to aid our war effort. Consisting of mostly pioneers and tropical medics, these troops will aid railway construction on our Palestinian front."
+ ottoman.131.a:0 "May Allah bless [GER.GetName]."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
@@ -5063,9 +5066,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_ottoman.35.t: "Officer Civil War"
  ww1_ottoman.35.d: "After the reactionary coup, Enver Pasha's supporters rebuilt the army with the aim of overthrowing the military junta. A few months later, the Army of Action was ready to attack. Nation was divided into two warring parties, the Civil War began."
  ww1_ottoman.35.a: "Death to the revolutionaries!"
- ww1_ottoman.36.t: "Asien-Korps Arrived"
- ww1_ottoman.36.d: "German command sent troops to help us. Their Asian corps have already arrived in the capital and are waiting for your commands."
- ww1_ottoman.36.a: "Allah bless [GER.GetName]."
  ww1_ottoman.37.t: "Ismail Enver Pasha escaped the [TUR.GetName]"
  ww1_ottoman.37.d: "Empire was defeated. In the coming months, or even weeks, our opponents will occupy Constantinople and establish their own order.\n\nEnver Pasha and his supporters refused to surrender to their opponents and left the capital. Their location is not known exactly, but presumably they managed to evacuate from Constantinople and are now on the territory of their former allies.\n\nThe Sultan is now on his own. Enver's dictatorship no longer restricts his actions. But this is just change from one military dictatorship to another. The victorious countries will try to do everything to turn the [TUR.GetName] into their own puppet."
  ww1_ottoman.37.a: "This is a curse."
