--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5224,6 +5224,7 @@ ROM_king_view_complete_disapprove:0 "§ONegative§!, which gives us:\nDaily Poli
 ROM_king_view_neutral:0 "§YNeutral§!, which gives us:\nDaily Political Power Gain: §Y+0.00§!\nStability: §Y+0.00%§!"
 ROM_king_view_approve:0 "§7Positive§!, which gives us:\nDaily Political Power Gain: §G+0.10§!\nStability: §G+6.00%§!"
 ROM_king_view_complete_approve:0 "§GVery positive§!, which gives us:\nDaily Political Power Gain: §G+0.20§!\nStability: §G+12.00%§!"
+ROM_kings_rotation:0 "Kings Rotation"
 #idea
 ROM_landlord_association:0 "Landlord Association"
 ROM_soldiers_benefits:0 "Soldier Benefits"
